# cudacomp

./: CMakeLists.txt  Coeff2Map_Loop.c  Coeff2Map_Loop.h  GPU_SVD_computeControlMatrix.c  GPU_SVD_computeControlMatrix.h  GPU_loop_MultMat_execute.c  GPU_loop_MultMat_execute.h  GPU_loop_MultMat_free.c  GPU_loop_MultMat_setup.c  GPU_loop_MultMat_setup.h  GPUloadCmat.c  GPUloadCmat.h  MVM_CPU.c  MVM_CPU.h  MVMextractModes.c  MVMextractModes.h  Makefile.am  MatMatMult_testPseudoInverse.c  MatMatMult_testPseudoInverse.h  PCA.c  README.md  cudacomp.c  cudacomp.h  cudacomp_MVMextractModesLoop.c  cudacomp_MVMextractModesLoop.h  cudacomp_types.h  cudacompinit.c  cudacomptest.c  cudacomptest.h  cusolver_compute_SVDpseudoInverse.c  cusolver_compute_SVDpseudoInverse.h  cusolver_symmetrize.cu  cusolver_symmetrize.h  magma_compute_SVDpseudoInverse.c  magma_compute_SVDpseudoInverse.h  magma_compute_SVDpseudoInverse_SVD.c  magma_compute_SVDpseudoInverse_SVD.h  printGPUMATMULTCONF.c
